--- a/templates/binary.html
+++ b/templates/binary.html
@@ -372,7 +372,7 @@
                     {% endif %}
 
                     {% if j == 2 %}
-                    <p style="color:black; font-size:20px; margin:1%">Result</p>
+                    <p style="color:white; font-size:20px; margin:1%">Result</p>
                     <div class="col-sm-1"></div>
                     {% for i in range(1, 10) %}
                     <p class="col-sm sumBit" id="sumBit{{i}}" style="margin:1%">0</p>
@@ -383,7 +383,7 @@
                     <br>
                     <br>
                     {% else %}
-                    <p style="color:black; font-size:20px; margin:auto">Rows</p>
+                    <p style="color:white; font-size:20px; margin:auto">Rows</p>
                     <div class="col-sm-1"></div>
                     {% for i in range(1, 9) %}
                     <button class="col-sm-1" id="bit{{j}}{{i}}" style="margin:1%" onclick="toggleSwitch('bit{{j}}{{i}}')">0</button>
