--- a/templates/binary.html
+++ b/templates/binary.html
@@ -359,9 +359,9 @@
                     font-size: 1em;
                     border:2px;
                     border-style: solid;
-                    border-color: black;
+                    border-color: hotpink;
                     text-align: center;
-                    background-color: white;
+                    background-color: pink;
                     margin-left: 1%;
                 }
             </style>
