--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -11,6 +11,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
             <!-- url_for is a Jinja2 pre-processor that finds route from function name (def) -->
             <a class="nav-link" href={{ url_for('home') }}>Home</a>
             <a class="nav-link" href={{ url_for('binary') }}>Binary</a>
+            <a class="nav-link" href={{ url_for('addition') }}>Addition</a>
             <a class="nav-link" href={{ url_for('about') }}>About</a>
             <a class="nav-link" href={{ url_for('insights') }}>Insights</a>
             <a class="nav-link" href="/stub">Stub</a>
