--- a/templates/color.html
+++ b/templates/color.html
@@ -1,188 +1,304 @@
 <!DOCTYPE html>
 {% extends "layouts/base.html" %}
-
-{% block background %}
-{% endblock %}
-{% set project = "binary" %}
-
 <!-- Search for all the Hack: below for hack-a-thon and mini-lab requirements -->
-<!-- need to adjust Templates to start -->
-
-DONE<!-- Hack: Build form to drive bit size dynamic updates
-use HTML Input Form in Frontend, ie toward top of Page
-send initial value and updated values to form via Python render_template -->
-DONE<!-- Hack: use 8 as default
-Change to an input box-->
-
-
-{% set BITS = 8 %}
-{% set MAX = ((2 ** 8) - 1) %}
-
-DONE <!-- Hack: Set bulbs and pass as variables via Python render_template
-add new images (ie PNGs) to project -->
+<!-- Hack: Build form to drive bit size dynamic updates
+           use HTML Input Form in Frontend, ie toward top of Page
+           send initial value and updated values to form via Python render_template -->
+<!-- Hack: use 8 as default -->
+{#% set BITS = 8 %#}
+{% set MAX = ((2 ** BITS) - 1) %}
+<!-- Hack: Set bulbs and pass as variables via Python render_template
+           add new images (ie PNGs) to project -->
 <!-- use your PNGs as default -->
-{% set imgBulbOn = "/static/assets/bulb_on.png" %}
-{% set imgBulbOff = "/static/assets/bulb_off.png" %}
+{#% set imgBulbOn = "/static/assets/openbook.jpg" %#}
+{% set imgBulbOff = "/static/assets/closedbook.jpg" %}
 {% set msgTurnOn = "Turn On" %}
 {% set msgTurnOff = "Turn Off" %}
-
-{% block body %}
+{% block meta %}
 <title>Binary page</title>
 <script>
-    const 8 = '{{ 8 }}'; let max = '{{ MAX }}'; let MAX = parseInt(max, 10);
+    const BITS = '{{ BITS }}'; let max = '{{ MAX }}'; let MAX = parseInt(max, 10);
     // return string with current value of each bit
-    function get8() {
+    function getBits() {
         let bits = "";
-        for(let i = 0; i < 8; i++) {
-            8 = 8 + document.getElementById('digit' + i).value;
+        for(let i = 0; i < BITS; i++) {
+            bits = bits + document.getElementById('digit' + i).value;
         }
-        return 8;
+        return bits;
     }
     // setter for DOM values
     function setConversions(binary) {
         document.getElementById('binary').innerHTML = binary;
-// DOM assignment to Octal conversion
+        // DOM assignment to Octal conversion
         document.getElementById('octal').innerHTML = parseInt(binary, 2).toString(8);
-// DOM assignment to Hexadecimal conversion
+        // DOM assignment to Hexadecimal conversion
         document.getElementById('hexadecimal').innerHTML = parseInt(binary, 2).toString(16);
-// DOM assignment to Decimal conversion
+        // DOM assignment to Decimal conversion
         document.getElementById('decimal').innerHTML = parseInt(binary, 2).toString(10);
-        /* Hack: show ASCII printable character(s) for each 8 8
-
-        DOM assignment by converting decimal https://www.w3schools.com/jsref/jsref_fromcharcode.asp
-        below ASCII for more ideas of where to make changes
-        */
-        document.getElementById('ascii').innerHTML = String.fromCharCode(parseInt(binary, 2));
+        /* Hack: show ASCII printable character(s) for each 8 bits
+         DOM assignment by converting decimal https://www.w3schools.com/jsref/jsref_fromcharcode.asplook
+         below ASCII for more ideas of where to make changes
+         */
+        document.getElementById('unicode').innerHTML = String.fromCharCode(parseInt(binary, 2))
     }
-
     // algorithm to convert decimal to base using division and remainder
     function decimal_2_base(decimal, base) {
         let conversion = "";
-// loop to convert to base
+        // loop to convert to base
         do {
             let digit = decimal % base;
             conversion = "" + digit + conversion; // what does this do?
-            decimal = ~~(decimal / base); // what does this do? what is ~~?
-        } while (decimal > 0); // why while at the end?
-// loop to pad with zeros
-        if (base === 2) { // only pad for binary conversions
-            for (let i = 0; conversion.length < 8; i++) {
+            decimal = ~~(decimal / base);         // what does this do?  what is ~~?
+        } while (decimal > 0);                  // why while at the end?
+        // loop to pad with zeros
+        if (base === 2) {                        // only pad for binary conversions
+            for (let i = 0; conversion.length < BITS; i++) {
                 conversion = "0" + conversion;
             }
         }
         return conversion;
     }
+    function updateBit(number, bitPosition, bitValue) {
+        console.log(number);
+        console.log(bitPosition);
+        console.log(bitValue);
 
+        const clearMask = ~(1 << bitPosition);
+        return (number & clearMask) | (bitValue << bitPosition);
+    }
+    function updateColorPane() {
+        const valueCtrlRed = document.getElementById('val-' + 0);
+        const valueCtrlGreen = document.getElementById('val-' + 1);
+        const valueCtrlBlue = document.getElementById('val-' + 2);
+        const colorCtrl = document.getElementById('rgb');
+        const colorVal = document.getElementById('rgb-val');
+
+        let red = valueCtrlRed.innerHTML;
+        let green = valueCtrlGreen.innerHTML;
+        let blue = valueCtrlBlue.innerHTML;
+
+        let rgb = 'rgb(' + red + ',' + green + ',' + blue + ')';
+        console.log(rgb);
+        colorCtrl.style.background=rgb;
+        colorVal.innerHTML="#"
+            + ('0' + Number(red).toString(16)).slice(-2)
+            + ('0' + Number(green).toString(16)).slice(-2)
+            + ('0' + Number(blue).toString(16)).slice(-2);
+    }
+    function toggleButBit(row, col) {
+        console.log('row: ' + row + ', col: ' + col);
+        const valueCtrl = document.getElementById('val-' + row);
+
+        const buttonCtrl = document.getElementById('butt-' + row + '-' + col);
+
+        let value = valueCtrl.innerHTML;
+        let bit = buttonCtrl.value;
+
+        console.log('bit before: ' + bit);
+        console.log('value before: ' + value);
+
+        // bitValue ? 1 : 0
+
+        if (bit == 0) {
+            bit = 1;
+        } else {
+            bit = 0;
+        }
+
+        console.log('bit after: ' + bit);
+
+        value = updateBit(value, col, bit)
+
+        console.log('Value: ' + value);
+        console.log('Bit:' + bit);
+
+        console.log('valueCtrl: ' + valueCtrl);
+        console.log('buttonCtrl: ' + buttonCtrl);
+
+        valueCtrl.innerHTML = value;
+        buttonCtrl.value = bit;
+        buttonCtrl.innerHTML = bit;
+        (bit ? buttonCtrl.style.background='#FFFFFF' : buttonCtrl.style.background='#000000');
+        (bit ? buttonCtrl.style.color='#000000' : buttonCtrl.style.color='#FFFFFF');
+        updateColorPane();
+    }
     // toggle selected bit and recalculate
     function toggleBit(i) {
-//alert("Digit action: " + i );
+    //alert("Digit action: " + i );
         const dig = document.getElementById('digit' + i);
         const image = document.getElementById('bulb' + i);
         const butt = document.getElementById('butt' + i);
-//
+        // Change digit and visual
+        if (image.src.match("{{ imgBulbOn }}")) {
+            dig.value = 0;
+            image.src = "{{ imgBulbOff }}";
+            butt.innerHTML = "{{ msgTurnOn }}";
+        } else {
+            dig.value = 1;
+            image.src = "{{ imgBulbOn }}";
+            butt.innerHTML = "{{ msgTurnOff }}";
         }
-// Binary numbers
-        const binary = get8();
+        // Binary numbers
+        const binary = getBits();
         setConversions(binary);
     }
     // add is positive integer, subtract is negative integer
     function add(n) {
-        let binary = get8();
-// convert to decimal and do math
+        let binary = getBits();
+        // convert to decimal and do math
         let decimal = parseInt(binary, 2);
-        if (n > 0) { // PLUS
+        if (n > 0) {  // PLUS
             decimal = MAX === decimal ? 0 : decimal += n; // OVERFLOW or PLUS
-        } else { // MINUS
+        } else  {     // MINUS
             decimal = 0 === decimal ? MAX : decimal += n; // OVERFLOW or MINUS
         }
-// convert the result back to binary
+        // convert the result back to binary
         binary = decimal_2_base(decimal, 2);
-// update conversions
+        // update conversions
         setConversions(binary);
-// update 8
+        // update bits
         for (let i = 0; i < binary.length; i++) {
             let digit = binary.substr(i, 1);
             document.getElementById('digit' + i).value = digit;
             if (digit === "1") {
-                document.getElementById('bulb' + i).src = "{{ On }}";
-                document.getElementById('butt' + i).innerHTML = "{{ Off }}";
+                document.getElementById('bulb' + i).src = "{{ imgBulbOn }}";
+                document.getElementById('butt' + i).innerHTML = "{{ msgTurnOff }}";
             } else {
-                document.getElementById('bulb' + i).src = "{{ Off }}";
-                document.getElementById('butt' + i).innerHTML = "{{ On }}";
+                document.getElementById('bulb' + i).src = "{{ imgBulbOff }}";
+                document.getElementById('butt' + i).innerHTML = "{{ msgTurnOn }}";
+            }
+        }
+    }
+    function times(n) {
+        let binary = getBits();
+        // convert to decimal and do math
+        let decimal = parseInt(binary, 2);
+        if (n > 1) {  // PLUS
+            decimal = MAX === decimal ? 0 : decimal *= n; // OVERFLOW or PLUS
+        } else  {     // MINUS
+            decimal = 0 === decimal ? MAX : decimal *= n; // OVERFLOW or MINUS
+        }
+        // convert the result back to binary
+        binary = decimal_2_base(decimal, 2);
+        // update conversions
+        setConversions(binary);
+        // update bits
+        for (let i = 0; i < binary.length; i++) {
+            let digit = binary.substr(i, 1);
+            document.getElementById('digit' + i).value = digit;
+            if (digit === "1") {
+                document.getElementById('bulb' + i).src = "{{ imgBulbOn }}";
+                document.getElementById('butt' + i).innerHTML = "{{ msgTurnOff }}";
+            } else {
+                document.getElementById('bulb' + i).src = "{{ imgBulbOff }}";
+                document.getElementById('butt' + i).innerHTML = "{{ msgTurnOn }}";
             }
         }
     }
 </script>
-                </tr>
-            </table>
+{% endblock %}
+{% block body %}
+<h1 class="text-center">Color Codes</h1>
+<div class="col-12">
+    <table class="table">
+        <div>
+            {% for i in range(BITS) %}
+            {%  if i % 8 == 8 %}
+            <td>
+                {%  endif %}
+            <td><input type="text" id='digit{{ i }}' Value="8" size ="1" readonly></td>
+            <td><img class="img-responsive py-3" id="bulb{{i}}" src="{{ imgBulbOff }}" alt="" width="40" height="Auto">
+                <button type="button" id="butt{{i}}" onclick="toggleBit('{{i}}')">{{ msgTurnOn }}</button>
+            </td>
+            {% if i + 1 % 8 ==0 or i== BITS %}
+            </tr>
+            {% endif %}
+            {% endfor %}`
         </div>
-
-        <div class="col-12">
-            <table class="table">
+    </table>
+</div>
+<div class="col-12">
+    <div class="row">
+        <table class="table">
+            <h2 class="text-right">Color Wheel</h2>
+            <div>
+                {% for color in range(3) %} {# we just want 3 rows for Red Green Blue #}
                 <tr>
-                    <!-- for loop -->
-                    {% for i in range(8) %}
-                    <td><img class="img-responsive py-3" id="bulb{{i}}" src="{{ Off }}" alt="" width="40" height="Auto">
-                        <button type="button" id="butt{{i}}" onclick="toggleBit('{{i}}')">{{ msgTurnOn }}</button>
+                    {% for i in range(7, -1, -1) %} {# we just want 8 bits per row #}
+                    <td style="width:100px">
+                        <button style="width:100px; background-color: #000000; color: white;"
+                                type="button" value="0"
+                                id="butt-{{color}}-{{i}}"
+                                onclick="toggleButBit('{{ color }}', '{{i}}')">
+                            0
+                        </button>
                     </td>
                     {% endfor %}
+                    <td>blank</td>
+                    <td id="val-{{color}}" >0</td>
                 </tr>
+                {% endfor %}
+            </div>
+        </table>
+    </div>
+</div>
+<div class="col-12" id="rgb" style="height: 100px; background-color: rgb(0,0,0);"></div>
+<div class="col-12">
+    <p id="rgb-val" class="text-center">#000000</p>
+</div>
+<!----------------------------------------RGB above---------------------------------------------------------->
+<div class="col-12">
+    <div class="row">
+        <table class="table">
+            <div>
+                {% for i in range(BITS) %} {# we just want 8 bits per row #}
+                {% if i % 8 == 0 %} {# this is a modulo operation where if the index is divisible by 8 then a table row gets created and if the index + 1 is divisible by 8 then the table row is ended #}
                 <tr>
-                    {% for i in range(8) %}
-                    <td><label for='digit{{i}}'></label><input type='text' id='digit{{i}}' Value="0" size="2" readonly></td>
-                    {% endfor %}
+                    {% endif %}
+                    <td><img class="img-responsive py-3" id="bulb1{{i}}" src="{{ imgBulbOff }}" alt="" width="40" height="Auto"> {# this sets the default image to off and creates the id for the image #}
+                        <button type="button" id="butt1{{i}}" onclick="toggleBit('{{i}}', 'bulb1', 'butt1', 'digit1')">{{ msgTurnOn }}</button>
+                        <input type='text' id='digit1{{i}}' Value="0" size="1" readonly></td>{# this sets the default message to off and calls the function "toggleBit" on the click of the button which is found in the javascript #}
+                    </td>
+                    {% if i + 1 % 8 == 0 or i == BITS %} {# this is the modulo operation for the end row #}
+                    var c = 0xff03c0; // 16712640
+                    var components = {
+                    r: (c & 0xff0000) >> 16,
+                    g: (c & 0x00ff00) >> 8,
+                    b: (c & 0x0000ff)
+                    };
                 </tr>
-            </table>
-        </div>
-<div class="col-12">
-    <table class="table">
-        <tr>
-            <!-- for loop -->
-            {% for i in range(8 ) %}
-            <td><img class="img-responsive py-3" id="bulb{{i}}" src="{{ Off }}" alt="" width="40" height="Auto">
-                <button type="button" id="butt{{i}}" onclick="toggleBit('{{i}}')">{{ msgTurnOn }}</button>
-            </td>
-            {% endfor %}
-        </tr>
-        <tr>
-            {% for i in range(8) %}
-            <td><label for='digit{{i}}'></label><input type='text' id='digit{{i}}' Value="0" size="2" readonly></td>
-            {% endfor %}
-        </tr>
-    </table>
-</div>
-<div class="col-12">
-    <table class="table">
-        <tr>
-            <!-- for loop -->
-            {% for i in range(8) %}
-            <td><img class="img-responsive py-3" id="bulb{{i}}" src="{{ Off }}" alt="" width="40" height="Auto">
-                <button type="button" id="butt{{i}}" onclick="toggleBit('{{i}}')">{{ msgTurnOn }}</button>
-            </td>
-            {% endfor %}
-        </tr>
-        <tr>
-            {% for i in range(8) %}
-            <td><label for='digit{{i}}'></label><input type='text' id='digit{{i}}' Value="0" size="2" readonly></td>
-            {% endfor %}
-        </tr>
-    </table>
-</div>
-
+                {% endif %}
+                {% endfor %}
+            </div>
+        </table>
     </div>
 </div>
 
-<html>
-<head>
-    <style>
-        body {
-            background-color: cornflowerblue;
-        }
-    </style>
-</head>
-<body>
-
-
-</body>
-</html>
+<div class="col-12">
+    <div class="row">
+        <table class="table">
+            <div>
+                {% for i in range(BITS) %} {# we just want 8 bits per row #}
+                {% if i % 8 == 0 %} {# this is a modulo operation where if the index is divisible by 8 then a table row gets created and if the index + 1 is divisible by 8 then the table row is ended #}
+                <tr>
+                    {% endif %}
+                    <td><img class="img-responsive py-3" id="bulb2{{i}}" src="{{ imgBulbOff }}" alt="" width="40" height="Auto"> {# this sets the default image to off and creates the id for the image #}
+                        <button type="button" id="butt2{{i}}" onclick="toggleBit('{{i}}', 'bulb2', 'butt2', 'digit2')">{{ msgTurnOn }}</button>
+                        <input type='text' id='digit2{{i}}' Value="0" size="1" readonly></td>{# this sets the default message to off and calls the function "toggleBit" on the click of the button which is found in the javascript #}
+                    </td>
+                    {% if i + 1 % 8 == 0 or i == BITS %} {# this is the modulo operation for the end row #}
+                    var c = 0xff03c0; // 16712640
+                    var components = {
+                    r: (c & 0xff0000) >> 16,
+                    g: (c & 0x00ff00) >> 8,
+                    b: (c & 0x0000ff)
+                    };
+                </tr>
+                {% endif %}
+                {% endfor %}
+            </div>
+        </table>
+    </div>
+</div>
+</div>
 {% endblock %}
