--- a/templates/color.html
+++ b/templates/color.html
@@ -220,7 +220,7 @@
 <div class="col-12">
     <div class="row">
         <table class="table">
-            <h2 class="text-right">Color Wheel</h2>
+            <h2 class="text-right">Color Chart</h2>
             <div>
                 {% for color in range(3) %} {# we just want 3 rows for Red Green Blue #}
                 <tr>
